# CUDA-Runtime-Interpreter

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Singularity  commands.txt  main.cpp
PCH_example/: Readme.md
PCH_example/cpu_template/: Readme.md  cpu_example.cpp  makefile
PCH_example/cpu_template/include/: cpu_example.hpp
PCH_example/cpu_template/myInclude/: cpu_example.hpp
PCH_example/cuda_normal/: Readme.md  makefile  runtime.cu
PCH_example/cuda_normal/myInclude/: kernel.cu
PCH_example/cuda_template/: Readme.md  makefile  runtime.cu
PCH_example/cuda_template/myInclude/: dummy.cu  kernel.cu
PCH_example/cuda_template_many_sources/: Readme.md  makefile  runtime.cu
PCH_example/cuda_template_many_sources/myInclude/: dummy.cu  kernel1.cu  kernel2.cu  kernel3.cu
example_prog/: fat_memory.cu  generate_clang_fatbin.sh  generate_clang_kernel.sh  generate_nvcc_fatbin.sh  hello.cpp  hello.cu  pthread_test.cu  runtime.cpp  runtime.cu  runtime.fatbin  runtime_c.cu
include/: Backend.hpp  CPPFrontend.hpp  CUDAFrontend.hpp  Config.hpp.in  DeviceCode.hpp  DeviceCodeGeneratorPCH.hpp  FrontendUtil.hpp  OrcJit.hpp
src/: Backend.cpp  CPPFrontend.cpp  CUDAFrontend.cpp  DeviceCode.cpp  DeviceCodeGeneratorPCH.cpp  Driver.cpp  FrontendUtil.cpp  OrcJit.cpp
